# SoftclubAI

./: .env.example  .gitignore  DEPLOYMENT.md  QUICKSTART.md  README.md  alembic.ini  create_balanced_dataset.py  evaluate_6_metrics.py  evaluate_on_real_data.py  extract_softclub_data.sql  load_demo_data.py  main.py  parse_softclub_sql.py  pyproject.toml  train_improved_model.py  train_model.py  train_on_balanced_data.py  update_server.py
alembic/: env.py
alembic/versions/: 11acfd55c890_create_students_table_with_6_features.py  a8f17b850981_add_phone_number.py  cb53a71b9c99_create_students_table.py  d3f3cc66745f_seed_diverse_students_for_demo.py
app/api/: dashboard_routes.py  routes.py  schemas.py
app/core/: config.py
app/data/: db_data.py  realistic_data_generator.py
app/db/: database.py  models.py
app/models/: llm_service.py  ml_model.py
data/: softclub_training.csv  training_data_balanced.csv
