[project]
name = "srm-softclub"
version = "0.1.0"
description = "AI Student Churn Prediction for Softclub CRM"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.32.0",
    "pydantic>=2.10.0",
    "pydantic-settings>=2.6.0",
    "xgboost>=2.0.0",
    "scikit-learn>=1.5.0",
    "numpy>=1.26.0",
    "pandas>=2.0.0",
    "groq>=0.13.0",
    "python-dotenv>=1.0.1",
    "sqlalchemy>=2.0.0",
    "psycopg2-binary>=2.9.0",
    "alembic>=1.13.0",
]
